// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`lint warning stability > bergen-bundle warning count is stable 1`] = `39`;

exports[`lint warning stability > dont-bundle warning count is stable 1`] = `0`;

exports[`lint warning stability > nt-bundle warning count is stable 1`] = `27`;

exports[`lint warning stability > nt-stayman warning count is stable 1`] = `5`;

exports[`lint warning stability > nt-transfers warning count is stable 1`] = `12`;

exports[`lint warning stability > weak-twos-bundle warning count is stable 1`] = `18`;

exports[`per-bundle interference > bergen-bundle > high-risk encoding collision count is stable 1`] = `0`;

exports[`per-bundle interference > bergen-bundle > interference risk summary is stable 1`] = `
{
  "high": 0,
  "low": 0,
  "medium": 0,
  "none": 0,
}
`;

exports[`per-bundle interference > dont-bundle > high-risk encoding collision count is stable 1`] = `0`;

exports[`per-bundle interference > dont-bundle > interference risk summary is stable 1`] = `
{
  "high": 0,
  "low": 0,
  "medium": 0,
  "none": 0,
}
`;

exports[`per-bundle interference > nt-bundle > high-risk encoding collision count is stable 1`] = `16`;

exports[`per-bundle interference > nt-bundle > interference risk summary is stable 1`] = `
{
  "high": 3,
  "low": 0,
  "medium": 3,
  "none": 0,
}
`;

exports[`per-bundle interference > nt-stayman > high-risk encoding collision count is stable 1`] = `2`;

exports[`per-bundle interference > nt-stayman > interference risk summary is stable 1`] = `
{
  "high": 1,
  "low": 0,
  "medium": 0,
  "none": 0,
}
`;

exports[`per-bundle interference > nt-transfers > high-risk encoding collision count is stable 1`] = `0`;

exports[`per-bundle interference > nt-transfers > interference risk summary is stable 1`] = `
{
  "high": 0,
  "low": 0,
  "medium": 1,
  "none": 0,
}
`;

exports[`per-bundle interference > weak-twos-bundle > high-risk encoding collision count is stable 1`] = `0`;

exports[`per-bundle interference > weak-twos-bundle > interference risk summary is stable 1`] = `
{
  "high": 0,
  "low": 0,
  "medium": 0,
  "none": 0,
}
`;
